--- a/src/app/flight-booking/flight-edit/flight-edit.component.html
+++ b/src/app/flight-booking/flight-edit/flight-edit.component.html
@@ -3,6 +3,10 @@
 </div>
 
 @if (flightForm.id().value() !== 0) {
+
+<!-- Form level errors -->
+<pre>{{ flightForm().errors() | json }}</pre>
+
 <form class="flight-form" (ngSubmit)="save()">
   <div class="form-group">
     <label for="flight-id">ID</label>
@@ -22,6 +26,8 @@
       id="flight-from"
       name="from"
     />
+    <!-- Field level errors -->
+    <pre>{{ flightForm.from().errors() | json }}</pre>
   </div>
 
   <div class="form-group">
@@ -32,6 +38,7 @@
       id="flight-to"
       name="to"
     />
+    <pre>{{ flightForm.from().errors | json }}</pre>
   </div>
 
   <div class="form-group">
@@ -61,7 +68,7 @@
   </div>
 
   <div class="mt-20">
-    <button class="btn btn-default" type="submit">Save</button>
+    <button class="btn btn-default" type="button" (click)="save()">Save</button>
   </div>
 </form>
 } @if(isPending()) {
