--- a/src/app/flight-booking/flight-edit/flight-edit.component.css
+++ b/src/app/flight-booking/flight-edit/flight-edit.component.css
@@ -3,3 +3,20 @@
   color: #fff;
   font-weight: bold;
 }
+
+
+th {
+  text-align: left;
+}
+
+.w-100 {
+  width: 100px;
+}
+
+.w-200 {
+  width: 200px;
+}
+
+.ml3 {
+  margin-left: 3px;
+}
