--- a/src/app/flight-booking/flight-edit/flight-edit.component.html
+++ b/src/app/flight-booking/flight-edit/flight-edit.component.html
@@ -7,109 +7,10 @@
 <pre>{{ flightForm().errors() | json }}</pre>
 
 <form class="flight-form" novalidate>
-  <div class="form-group">
-    <label for="flight-id">ID</label>
-    <input
-      class="form-control"
-      [control]="flightForm.id"
-      id="flight-id"
-      name="id"
-    />
-  </div>
 
-  <div class="form-group">
-    <label for="flight-from">From</label>
-    <input
-      class="form-control"
-      [control]="flightForm.from"
-      id="flight-from"
-      name="from"
-    />
-    <!-- Field level errors -->
-    <pre>{{ flightForm.from().errors() | json }}</pre>
-  </div>
-
-  <div class="form-group">
-    <label for="flight-to">To</label>
-    <input
-      class="form-control"
-      [control]="flightForm.to"
-      id="flight-to"
-      name="to"
-    />
-    <pre>{{ flightForm.from().errors | json }}</pre>
-  </div>
-
-  <div class="form-group">
-    <label for="flight-date">Date</label>
-    <div class="input-group">
-      <input
-        class="form-control"
-        [control]="flightForm.date"
-        id="flight-date"
-        type="datetime-local"
-        name="date"
-      />
-    </div>
-  </div>
-
-  <div class="form-group form-check">
-    <label class="form-check-label">
-      <input
-        type="checkbox"
-        class="form-check-input"
-        [control]="flightForm.delayed"
-        id="flight-delayed"
-        name="delayed"
-      />
-      Delayed</label
-    >
-  </div>
-
-  <fieldset>
-    <legend>Prices</legend>
-    <table>
-      <tr>
-        <th>Flight Class</th>
-        <th>Amount</th>
-        <th></th>
-      </tr>
-      @for(price of flightForm.prices; track $index) {
-      <tr>
-        <td><input [control]="price.flightClass" class="form-control w-200" /></td>
-        <td><input [control]="price.amount" class="form-control w-100" /></td>
-        <td>
-          Flight Class: {{ price.flightClass().errors() | json }},
-          Amount: {{ price.amount().errors() | json }}
-        </td>
-      </tr>
-      }
-    </table>
-    <button (click)="addPrice()" type="button" class="btn btn-default ml3">Add</button>
-  </fieldset>
-
-  <fieldset>
-    <legend>Aircraft</legend>
-
-    <div class="form-group">
-      <label for="type">Type:</label>
-      <input
-        id="type"
-        class="form-control"
-        [control]="flightForm.aircraft.type"
-      />
-      <pre>{{ flightForm.aircraft.type().errors() | json }}</pre>
-    </div>
-    <div class="form-group">
-      <label for="registration">Registration:</label>
-      <input
-        id="registration"
-        class="form-control"
-        [control]="flightForm.aircraft.registration"
-      />
-      <pre>{{ flightForm.aircraft.registration().errors() | json }}</pre>
-    </div>
-  </fieldset>
+  <app-flight [flight]="flightForm"></app-flight>
+  <app-prices [prices]="flightForm.prices"></app-prices>
+  <app-aircraft [aircraft]="flightForm.aircraft"></app-aircraft>
 
   <div class="mt-20">
     <button class="btn btn-default" type="button" (click)="save()">Save</button>
