--- a/src/styles.css
+++ b/src/styles.css
@@ -393,3 +393,19 @@ body {
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 1000;
 }
+
+th {
+  text-align: left;
+}
+
+.w-100 {
+  width: 100px;
+}
+
+.w-200 {
+  width: 200px;
+}
+
+.ml3 {
+  margin-left: 3px;
+}
