--- a/src/app/flight-booking/flight-edit/flight-edit.component.html
+++ b/src/app/flight-booking/flight-edit/flight-edit.component.html
@@ -4,8 +4,7 @@
 
 @if (flightForm.id().value() !== 0) {
 
-<pre>{{ flightForm().errors() | json }}</pre>
-
+<app-validation-errors [errors]="flightForm().errors()" />
 <form class="flight-form" novalidate>
 
   <app-flight [flight]="flightForm"></app-flight>
