--- a/src/app/flight-booking/flight-edit/aircraft/aircraft.component.html
+++ b/src/app/flight-booking/flight-edit/aircraft/aircraft.component.html
@@ -6,7 +6,7 @@
   <div class="form-group">
     <label for="type">Type:</label>
     <input id="type" class="form-control" [control]="aircraftFrom.type" />
-    <pre>{{ aircraftFrom.type().errors() | json }}</pre>
+    <app-validation-errors [errors]="aircraftFrom.type().errors()"></app-validation-errors>
   </div>
   <div class="form-group">
     <label for="registration">Registration:</label>
@@ -15,6 +15,6 @@
       class="form-control"
       [control]="aircraftFrom.registration"
     />
-    <pre>{{ aircraftFrom.registration().errors() | json }}</pre>
+    <app-validation-errors [errors]="aircraftFrom.registration().errors()"></app-validation-errors>
   </div>
 </fieldset>
