--- a/src/app/flight-booking/flight-edit/flight/flight.component.html
+++ b/src/app/flight-booking/flight-edit/flight/flight.component.html
@@ -62,3 +62,9 @@
     Delayed</label
   >
 </div>
+
+<div class="form-group form-check">
+  <label for="delay">Date</label>
+  <app-delay-stepper id="delay" [control]="flightForm.delay" />
+  <app-validation-errors [errors]="flightForm.delay().errors()" />
+</div>
