--- a/src/app/flight-booking/flight-edit/prices/prices.component.html
+++ b/src/app/flight-booking/flight-edit/prices/prices.component.html
@@ -1,12 +1,10 @@
 @let priceForms = prices();
 
-<app-validation-errors
-  [errors]="priceForms().errorSummary()"
-  [showFieldNames]="true"
-/>
-
 <fieldset>
   <legend>Prices</legend>
+  <app-validation-errors
+    [errors]="priceForms().errors()"
+  />
   <table>
     <tr>
       <th>Flight Class</th>
