--- a/src/app/shared/delay-stepper/delay-stepper.component.html
+++ b/src/app/shared/delay-stepper/delay-stepper.component.html
@@ -2,5 +2,5 @@
 <div class="delay">No Delay!</div>
 } @else {
 <div class="delay">{{ value() }}</div>
-<div><a (click)="inc()">+15m</a> | <a (click)="dec()">-15m</a></div>
+<div><a (click)="inc()">+15 Minutes</a> | <a (click)="dec()">-15 Minutes</a></div>
 }
