--- a/src/app/flight-booking/flight-edit/flight/flight.component.html
+++ b/src/app/flight-booking/flight-edit/flight/flight.component.html
@@ -15,16 +15,11 @@
 
   <div class="form-group">
     <label for="flight-from">From</label>
-    <input
-      class="form-control"
-      [control]="flightForm.from"
-      id="flight-from"
-      name="from"
-    />
-    <!-- Field level errors -->
-    <app-validation-errors
-      [errors]="flightForm.from().errors()"
-    ></app-validation-errors>
+    <input class="form-control" [control]="flightForm.from" id="flight-from" />
+    <app-validation-errors [errors]="flightForm.from().errors()" />
+    @if (flightForm.from().pending()) {
+      <div>Waiting for Async Validation Result...</div>
+    }
   </div>
 
   <div class="form-group">
@@ -35,9 +30,6 @@
       id="flight-to"
       name="to"
     />
-    <app-validation-errors
-      [errors]="flightForm.from().errors()"
-    ></app-validation-errors>
   </div>
 
   <div class="form-group">
