--- a/src/app/shared/field-meta-data/field-meta-data.component.html
+++ b/src/app/shared/field-meta-data/field-meta-data.component.html
@@ -1,4 +1,7 @@
 @if(isRequired()) {
 <span class="info">*</span>
-} 
+}
 <span class="info info-small">{{ length() }}</span>
+@if(city()) {
+<span class="info info-small">City</span>
+}
