--- a/src/app/flight-booking/flight-search/flight-search.component.html
+++ b/src/app/flight-booking/flight-search/flight-search.component.html
@@ -5,11 +5,11 @@
 <form>
   <div class="form-group">
     <label>From:</label>
-    <input [control]="filterForm.from" name="from" class="form-control" />
+    <input name="from" class="form-control" />
   </div>
   <div class="form-group">
     <label>To:</label>
-    <input [control]="filterForm.to" name="to" class="form-control" />
+    <input name="to" class="form-control" />
   </div>
 
   <div class="form-group">
@@ -22,9 +22,6 @@
   </div>
 </form>
 
-@if(error()) {
-<div class="alert alert-danger">{{ error() | json }}</div>
-} @else {
 <div class="row">
   @for (f of flights(); track f.id) {
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
@@ -45,4 +42,3 @@
 <div>
   <pre>{{ basket() | json }}</pre>
 </div>
-}
