--- a/src/app/flight-booking/flight-search/flight-search.component.html
+++ b/src/app/flight-booking/flight-search/flight-search.component.html
@@ -4,32 +4,24 @@
 
 <form>
   <div class="form-group">
-    <label>From:</label>
-    <input name="from" class="form-control" />
+    <label for="from">From:</label>
+    <input [(ngModel)]="from" id="from" name="from" class="form-control" />
   </div>
   <div class="form-group">
-    <label>To:</label>
-    <input name="to" class="form-control" />
+    <label for="to">To:</label>
+    <input [(ngModel)]="to" id="to" name="to" class="form-control" />
   </div>
 
   <div class="form-group">
-    <input
-      type="button"
-      (click)="search()"
-      class="btn btn-default"
-      value="Search"
-    />
+    <button (click)="search()" class="btn btn-default">Search</button>
+    <button (click)="delay()" class="btn btn-default">Delay</button>
   </div>
 </form>
 
 <div class="row">
-  @for (f of flights(); track f.id) {
+  @for (f of flights; track f.id) {
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-    <app-flight-card
-      [item]="f"
-      [selected]="basket()[f.id]"
-      (selectedChange)="updateBasket(f.id, $event)"
-    >
+    <app-flight-card [item]="f" [(selected)]="basket[f.id]">
       <p class="middle"><i>Delays are possible!</i></p>
       <p class="bottom"><small>Statement without guarantee!</small></p>
     </app-flight-card>
@@ -40,5 +32,5 @@
 <p>&nbsp;</p>
 
 <div>
-  <pre>{{ basket() | json }}</pre>
+  <pre>{{ basket | json }}</pre>
 </div>
