--- a/src/app/flight-booking/flight-search/flight-search.component.html
+++ b/src/app/flight-booking/flight-search/flight-search.component.html
@@ -12,25 +12,38 @@
     <input [(ngModel)]="to" id="to" name="to" class="form-control" />
   </div>
 
+  <div>
+    {{flightRoute()}}
+  </div>
+
   <div class="form-group">
     <button (click)="search()" class="btn btn-default">Search</button>
     <button (click)="delay()" class="btn btn-default">Delay</button>
   </div>
 </form>
 
+@if(!error()) {
+
 <div class="row">
-  @for (f of flights; track f.id) {
+  @for (f of flightsWithDelay(); track f.id) {
   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-    <app-flight-card [item]="f" [(selected)]="basket[f.id]">
+    <app-flight-card
+      [item]="f"
+      [selected]="basket()[f.id]"
+      (selectedChange)="updateBasket(f.id, $event)"
+    >
       <p class="middle"><i>Delays are possible!</i></p>
       <p class="bottom"><small>Statement without guarantee!</small></p>
     </app-flight-card>
   </div>
   }
 </div>
-
+}
+@else {
+  <div>{{ error() | json }}</div>
+}
 <p>&nbsp;</p>
 
 <div>
-  <pre>{{ basket | json }}</pre>
+  <pre>{{ basket() | json }}</pre>
 </div>
