feat: add signal store

--- a/src/app/flight-booking/flight-edit/flight-edit.component.html
+++ b/src/app/flight-booking/flight-edit/flight-edit.component.html
@@ -2,22 +2,22 @@
   <h2 class="title">Flight Edit</h2>
 </div>
 
-@if (flight.id() !== 0) {
+@if (flight().id !== 0) {
 
 <form class="flight-form" (ngSubmit)="save()">
   <div class="form-group">
     <label for="flight-id">ID</label>
-    <input class="form-control" id="flight-id" name="id" />
+    <input [field]="flightForm.id" class="form-control" id="flight-id" name="id" />
   </div>
 
   <div class="form-group">
     <label for="flight-from">From</label>
-    <input class="form-control" id="flight-from" name="from" />
+    <input [field]="flightForm.from" class="form-control" id="flight-from" name="from" />
   </div>
 
   <div class="form-group">
     <label for="flight-to">To</label>
-    <input class="form-control" id="flight-to" name="to" />
+    <input [field]="flightForm.to" class="form-control" id="flight-to" name="to" />
   </div>
 
   <div class="form-group">
@@ -25,6 +25,7 @@
     <div class="input-group">
       <input
         class="form-control"
+        [field]="flightForm.date"
         id="flight-date"
         type="datetime-local"
         name="date"
@@ -38,6 +39,7 @@
         type="checkbox"
         class="form-check-input"
         id="flight-delayed"
+        [field]="flightForm.delayed"
         name="delayed"
       />
       Delayed</label
