--- a/src/app/flight-booking/flight-search/flight-search.component.html
+++ b/src/app/flight-booking/flight-search/flight-search.component.html
@@ -5,11 +5,14 @@
 <form>
   <div class="form-group">
     <label for="from">From:</label>
-    <input [(ngModel)]="from" id="from" name="from" class="form-control" />
+    <input [field]="searchForm.from" id="from" name="from" class="form-control" />
+    <div>
+      {{ searchForm.from().errors() | json }}
+    </div>
   </div>
   <div class="form-group">
     <label for="to">To:</label>
-    <input [(ngModel)]="to" id="to" name="to" class="form-control" />
+    <input [field]="searchForm.to" id="to" name="to" class="form-control" />
   </div>
 
   <div>
